--- a/src/main/scripts/snapshot-results.mk.in
+++ b/src/main/scripts/snapshot-results.mk.in
@@ -10,20 +10,11 @@
 ##
 ## PROJECT -- e.g., apache
 
-%%SNAPSHOT_RESULTS_DIR%%/joint_function_ab_smell_snapshot.csv: %%SNAPSHOT_RESULTS_DIR%%/ABRes.csv %%SNAPSHOT_RESULTS_DIR%%/joint_function_change_snapshot.csv
-	join_functions_to_ab_smells_snapshot.sh %%SNAPSHOT_RESULTS_DIR%%
-
-%%SNAPSHOT_RESULTS_DIR%%/joint_function_change_snapshot.csv: %%SNAPSHOT_RESULTS_DIR%%/all_functions.csv %%SNAPSHOT_RESULTS_DIR%%/function_change_snapshot.csv
-	join_all_functions_to_function_change_snapshot.sh %%SNAPSHOT_RESULTS_DIR%%
+##%%SNAPSHOT_RESULTS_DIR%%/joint_function_ab_smell_age_snapshot.csv: %%SNAPSHOT_RESULTS_DIR%%/ABRes.csv %%SNAPSHOT_RESULTS_DIR%%/all_functions.csv %%SNAPSHOT_RESULTS_DIR%%/function_change_hunks.csv
+##	join_functions_to_ab_smells_snapshot.sh %%SNAPSHOT_RESULTS_DIR%%
 
 %%SNAPSHOT_RESULTS_DIR%%/all_functions.csv: %%SNAPSHOT_RESULTS_DIR%%/../revisionsFull.csv
 	lsallfuncs.sh -p $(PROJECT) %%SNAPSHOT_DATE%%
-
-%%SNAPSHOT_RESULTS_DIR%%/function_change_snapshot.csv: %%SNAPSHOT_RESULTS_DIR%%/function_change_commits.csv
-	function_change_commits2function_change_snapshot.sh %%SNAPSHOT_RESULTS_DIR%%
-
-%%SNAPSHOT_RESULTS_DIR%%/function_change_commits.csv: %%SNAPSHOT_RESULTS_DIR%%/function_change_hunks.csv
-	function_change_hunks2function_change_commits.sh %%SNAPSHOT_RESULTS_DIR%%
 
 %%SNAPSHOT_RESULTS_DIR%%/function_change_hunks.csv: %%SNAPSHOT_RESULTS_DIR%%/../revisionsFull.csv
 	lschfuncs.sh -p $(PROJECT) %%SNAPSHOT_DATE%%
